--- a/public/locales/es/translations.json
+++ b/public/locales/es/translations.json
@@ -1,3 +1,8 @@
 {
-  "title": "Multi-landddddguage dddapp"
+  "hero-section": {
+    "web-page": "Pagina Web"
+  },
+  "about": "Sobre mi",
+  "proyects": "Proyectos",
+  "experience": "Experiencia"
 }
